fixed mobile view extra padding

--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
   #Portfolio,
   #Skill,
   #Contact {
-    padding: 10px;
+    padding: 10px 0px;
   }
   .title {
     font-size: 18px;
